<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCommand"
    android:background="@color/blue_background"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/checkS"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAdd"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPrcAli"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/txtEditAlimento"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@color/white"
            android:textColor="@color/black"
            android:autofillHints="Max 100"
            android:inputType="number"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txttHoraI"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/txtEditHoraI"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@color/white"
            android:textColor="@color/black"
            android:autofillHints="Max 100"
            android:inputType="time"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txttHoraF"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/txtEditHoraF"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@color/white"
            android:textColor="@color/black"
            android:autofillHints="Max 100"
            android:inputType="time"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                tools:ignore="ButtonStyle" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>