<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manual"
    android:background="@drawable/fondo"
    android:paddingTop="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="175dp"
        android:background="@drawable/square"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:id="@+id/sensorManual"
                    android:layout_width="20dp"
                    android:orientation="vertical"
                    android:layout_height="20dp"
                    android:background="@drawable/circle_red"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/piscina"
                android:textColor="@color/white"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/btnEntrar"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/btnSalir"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:id="@+id/sensorFeeder"
                    android:layout_width="20dp"
                    android:orientation="vertical"
                    android:layout_height="20dp"
                    android:background="@drawable/circle_black"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/feeder"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/ON"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/btnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/OFF"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnActualizarManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnActualizar"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</LinearLayout>

</LinearLayout>