<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtEtiqueta"
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:layout_height="wrap_content"
        android:text="@string/txtEtiqueta"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:background="@drawable/border_textview"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        tools:ignore="RtlCompat"/>

    <TextView
        android:id="@+id/txtPiscina"
        android:layout_width="0dp"
        android:layout_weight=".3"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:background="@drawable/border_textview"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txtFechaRegistro"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/txtFecha"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:background="@drawable/border_textview"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginStart="12dp"
        android:text="@string/btnEliminar"
        tools:ignore="SmallSp"
        android:visibility="visible"/>
</LinearLayout>